src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>ProductEqpt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HFM_Total__c</fullName>
        <description>Total of Quantity Multiplied by Revenue</description>
        <label>HFM Line Item Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ibase_Product_Model__c</fullName>
        <formula>Equipment__r.Ibase_Product_Model__c</formula>
        <label>Product Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIST_PRICE__c</fullName>
        <formula>ListPrice</formula>
        <label>LIST PRICE $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <formula>Equipment__r.Installed_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-manufactured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Serial_Lot_Number__c</fullName>
        <formula>Equipment__r.Serial_Lot_Number__c</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Manufacturer__c</fullName>
        <formula>TEXT(Equipment__r.System_Manufacturer__c)</formula>
        <label>System Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_End__c</fullName>
        <formula>Equipment__r.Warranty_End__c</formula>
        <label>Warranty End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <formula>TEXT(Equipment__r.Warranty_Status__c)</formula>
        <label>Warranty Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Type_Description__c</fullName>
        <formula>Equipment__r.Warranty_Type_Description__c</formula>
        <label>Warranty Type Description</label>
        <type>Text</type>
    </fields>
</CustomObject>